force-app/main/default/objects/User_Medication_Preference__c/User_Medication_Preference__c.object-meta.xml
<CustomObject>
    <label>User Medication Preference</label>
    <nameField>
        <displayFormat>UMP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Medication Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>