force-app/main/default/objects/User_Medication_Preference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>User Medication Preferences</relationshipLabel>
    <relationshipName>User_Medication_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>